# paypal-pos-inventory-tracker

./: .dockerignore  .gitignore  DockerFile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: constants.py  main.py  models.py  services.py  utils.py  webhook_handler.py
app/core/: config.py  logging.py
app/creds/zettle/: .gitkeep
app/db/: schemes.py
app/google_drive/: aoth.py  auth.py  client.py  drive_manager.py  drive_sync_worker.py
app/models/: google_drive.py  inventory.py  zettle.py
app/scripts/: google_oath.py
app/tests/: test_endpoint.py  test_utils.py
app/zettle/: auth.py  data_fetchers.py  services.py  subscription_ensurer.py  webhook_manager.py
